--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="59dp"
-        android:hint="enter name"></EditText>
+        android:hint="enter name"/>
 
     <Button
         android:id="@+id/dis"
@@ -73,5 +73,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
     </TextView>
+
+    <Button
+        android:id="@+id/reg"
+        android:text="register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </Button>
 
 </LinearLayout>
